--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,8 @@
 @import "scss/feature";
 @import "scss/responsi";
 @import "scss/user";
+@import "scss/awesone";
+@import "scss/over";
 
 
 // Import cuối cùng
