--- a/scss/_user.scss
+++ b/scss/_user.scss
@@ -13,13 +13,14 @@
         font-size: 22px;
         text-align: center;
         margin-bottom: 10px;
-
     }
     &-text{
         color: white;
+        font-style: italic;
         font-size: 16px;
+        line-height: 1.5;
         text-align: center;
-        font-family: 'Exo', sans-serif;
+        font-family: "Exo", sans-serif;
         padding-bottom: 96px;
     }
     &-img{
