--- a/style.css
+++ b/style.css
@@ -145,6 +145,10 @@ body {
   max-width: 100%;
 }
 
+input {
+  color: white;
+}
+
 .d-flex {
   display: flex;
 }
@@ -163,16 +167,19 @@ body {
   position: relative;
   background-image: url(./image/header.png);
   background-repeat: no-repeat;
-  height: 100vh;
   background-position: center;
   background-size: cover;
+  padding-top: 157px;
+  padding-bottom: 240px;
 }
 .header-title {
   font-family: "Exo", sans-serif;
   text-align: center;
   font-size: 60px;
-  font-weight: 400;
-  padding-top: 225px;
+  font-weight: 100;
+  max-width: 886px;
+  margin-left: 113px;
+  line-height: 1.5;
 }
 .header-img {
   border-radius: 64%;
@@ -249,7 +256,6 @@ body {
   background-image: url(./image/img.png);
   width: 100%;
   height: 100%;
-  margin-left: 78px;
   background-size: cover;
 }
 @media (max-width: 767px) {
@@ -291,10 +297,13 @@ body {
 .feature {
   background-image: url(./image/image.png);
   background-repeat: no-repeat;
-  height: 100vh;
+  padding-top: 111px;
+  padding-bottom: 123px;
   background-position: center;
   background-size: cover;
   z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: relative;
 }
 .feature-header {
@@ -369,7 +378,9 @@ body {
 }
 .user-text {
   color: white;
+  font-style: italic;
   font-size: 16px;
+  line-height: 1.5;
   text-align: center;
   font-family: "Exo", sans-serif;
   padding-bottom: 96px;
@@ -411,35 +422,76 @@ body {
   background-color: #323969;
 }
 .over-wrap {
-  margin-top: 94px;
-  margin-bottom: 86px;
+  padding-top: 39px;
+  padding-bottom: 45px;
 }
-.over-seach {
-  display: inline-block;
-  margin-right: 20px;
+.over-body {
+  display: flex;
 }
-.over-seach input {
-  padding: 10px;
-  border-radius: 4px;
-  background-color: #464c77;
-  width: 229px;
-  border: 1px solid #fff;
-}
-.over-title {
+.over-sub-title {
   color: #ff6d6d;
   margin-bottom: 10px;
   text-align: center;
   font-size: 16px;
   font-family: "Exo", sans-serif;
 }
-.over-desc {
+.over-title {
   font-size: 40px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: white !important;
+  font-family: "Exo", sans-serif;
+}
+.over-from {
+  padding: 11px 84px;
+  border: 0px solid #fff;
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  border-radius: 4px;
+  text-decoration: none;
+}
+.over-footer {
+  margin-top: 23px;
   text-align: center;
   color: white !important;
   font-family: "Exo", sans-serif;
 }
-.over-text {
-  margin-top: 23px;
+.over-input {
+  padding: 11px 17px;
+  background-color: #464c77;
+  color: #fff;
+  border: 1px solid;
+  border-radius: 1px solid #fff;
+}
+.over-day {
+  padding-top: 12px;
+  color: white;
+  font-family: "Exo", sans-serif;
+}
+.over-img-link {
+  background-color: #ff6d6d;
+  color: #fff;
+  padding: 11px 84px;
+  border: 0px solid #fff;
+  font-family: "Exo", sans-serif;
   text-align: center;
-  color: white !important;
+  border-radius: 4px;
+  text-decoration: none;
+}
+.over-link {
+  color: #fff;
+}
+.over-icon {
+  display: flex;
+  margin-top: 123px;
+}
+.over-form form input::-moz-placeholder {
+  color: white;
+}
+.over-form form input::placeholder {
+  color: white;
+}
+
+.footer-main {
+  display: grid;
 }/*# sourceMappingURL=style.css.map */
