--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -29,8 +29,9 @@
     color:#ff6d6d;
     }
     &-desc {
-        font-family: 'Exo', sans-serif;
+        font-family: "Exo", sans-serif;
         font-size: 40px;
+        max-width: 494px;
         font-weight: 300;
     }
     &-img{
