--- a/scss/_awesone.scss
+++ b/scss/_awesone.scss
@@ -19,10 +19,13 @@
 
     }
     &-text{
-        font-family: 'Exo', sans-serif;
+        font-family: "Exo", sans-serif;
         font-size: 16px;
-        margin-bottom: 130px;
-      
+        color:#8b8b8e;
+        max-width: 619px;
+        line-height: 24px;
+        margin-left: 247px;
+        margin-bottom: 63px;
     }
 
 }
