--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -1,46 +1,64 @@
 .design{
    background-color: #ffff;
     &-left{
-        padding-bottom: 73px;
-        padding-top: 82px;
+        padding-bottom: 190px;
+        padding-top: 175px;
+        padding-left: 52px;
     }
    &-title {
-        color: #ff6d6d;
-        margin-bottom: 43px;
-        font-size: 16px;
-        font-family: 'Exo', sans-serif;
+    color: #ff6d6d;
+    margin-bottom: 6px;
+    font-size: 16px;
+    letter-spacing: 2.5px;
+    font-family: "Exo", sans-serif;
     }
-    &-text {
-        margin-top: 11px;
-        color: black;
-        font-family: 'Exo', sans-serif;
+        &-text {
+        margin-top: 37px;
+        color:#8b8b8e;
+        font-family: "Exo", sans-serif;
         font-size: 16px;
-        line-height: 26px;
-        max-width: 421px;
+        line-height: 30px;
+        max-width: 548px;
     }
-    &-text1{
-        color: black;
-        margin-top: 34px;
-        line-height: 26px;
-        font-family: 'Exo', sans-serif;
-        font-size: 16px;
-    }
+    // &-text1{
+    //     color: black;
+    //     margin-top: 34px;
+    //     line-height: 26px;
+    //     font-family: 'Exo', sans-serif;
+    //     font-size: 16px;
+    // }
    &-dots{
     color:#ff6d6d;
     }
     &-desc {
+        letter-spacing: 0.6px;
         font-family: "Exo", sans-serif;
         font-size: 40px;
-        max-width: 494px;
-        font-weight: 300;
+        max-width: 535px;
+        line-height: 50px;
+        font-weight: 500;
     }
     &-img{
+        overflow: hidden;
         background-image: url(./image/img.png);
         width: 100%;
         height: 100%;
         background-size: cover;
+        &::before {
+            content: "";
+            background: red;
+            width: 144%;
+            height: 55%;
+            display: block;
+            position: relative;
+            right: 29px;
+            bottom: -460px;
+            transform: rotate(319deg);
+            opacity: 0.5;
+        }
+    
         @media (max-width: 767px) {
-            min-height: 50vw;
+            min-height: 104vw;
         }
     }
     &-col-right{
