--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -9,8 +9,14 @@
     object-fit: cover;
     position: relative;
     &-header{
-        padding-top: 134px;
+        padding-top: 11px;
         text-align: center;
+    }
+    &-content {
+        margin-bottom: 85px;
+    }
+    &-wrap{
+        display: flex;
     }
     &-heading{
         color:#ff6d6d;
@@ -26,13 +32,15 @@
     &-text{
         font-size: 22px;
         font-family: 'Exo', sans-serif;
-        font-weight: 300;
+        font-weight: 500;
         text-align: center;
         margin-bottom: 10px;
     }
     &-desc{
-        font-family: 'Exo', sans-serif;
+        font-family: "Exo", sans-serif;
         font-size: 16px;
+        line-height: 1.5;
+        color:#8b8b8e;
         text-align: center;
     }
     &-icon {
