--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,12 +9,14 @@
     &-heading {
         font-size: 22px;
         color: #282828;
+        font-family: "Exo", sans-serif;
         margin-bottom: 47px;
-        font-weight: 400;
+        font-weight: 500;
     }
     &-link {
         text-decoration: none;
         list-style: none;
+        font-family: "Exo", sans-serif;
         color: #8a8a8a;
         letter-spacing: 0.5px;
         font-weight: 400;
@@ -34,13 +36,13 @@
     &-input {
         padding: 17px 45px 17px 17px;
         border-radius: 2px;
+        font-family: "Exo", sans-serif;
         border: 1px solid #b8b8bf;
-
     }
     &-logo {
         display:flex;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
         margin-bottom: 18px;
     }
     &-image {
@@ -54,11 +56,13 @@
        
     }
     &-desc {
-        line-height: 1.5;
+        line-height: 1.6;
         color: #8a8a8a;
-        max-width: 233px;
+        max-width: 264px;
+        font-family: "Exo", sans-serif;
+
     }
     &-img  {
-        margin-left: 70px;
+        // margin-left: 70px;
     }
 }
