--- a/scss/_over.scss
+++ b/scss/_over.scss
@@ -1,17 +1,97 @@
+// .over{
+//     background-color: #323969;
+//     &-wrap {
+//         padding-top: 39px;
+//         padding-bottom: 45px;
+//     }
+//     &-body{
+//         display:flex ;
+//     }
+//     &-sub-title{
+//         color: #ff6d6d;
+//         margin-bottom: 10px;
+//         text-align: center;
+//         font-size: 16px;
+//         font-family: 'Exo', sans-serif;
+//     }
+//     &-title{
+//         font-size: 40px;
+//         text-align: center;
+//         margin-bottom: 10px;
+//         color: white !important; 
+//         font-family: 'Exo', sans-serif;
+//     }
+//      &-from{
+//         padding: 11px 84px;
+//         border: 0px solid #fff;
+//         font-family: 'Exo', sans-serif;
+//         text-align: center;
+//         border-radius: 4px;
+//         text-decoration: none; 
+//     }
+//     &-footer{
+//         margin-top: 23px;
+//         text-align: center;
+//         color: white !important; 
+//         font-family: 'Exo', sans-serif;
+
+//     }
+//     &-input{
+//         padding: 11px 17px;
+//         background-color: #464c77;
+//         color:#fff ;
+//         border: 1px solid;
+//         border-radius: 1px solid #fff;
+//     }
+//     &-day {
+//         padding-top: 12px;
+//         color: white;
+//         font-family: 'Exo', sans-serif;
+//     }
+//     &-img-link{
+//         background-color: #ff6d6d;
+//         color: #fff;
+//         padding: 11px 84px;
+//         border: 0px solid #fff;
+//         font-family: 'Exo', sans-serif;
+//         text-align: center;
+//         border-radius: 4px;
+//         text-decoration: none; 
+//     }
+//     &-link{
+//         color: #fff;
+//     }
+//     &-icon{
+//         display: flex;
+//         margin-top: 123px;
+//     }
+//     &-form form input::placeholder {
+//         color: white;
+//       }
+// }
 .over{
     background-color: #323969;
-    &-wrap {
-        padding-top: 39px;
-        padding-bottom: 45px;
+    padding-top: 90px;
+    padding-bottom: 85px;
+    &-days{
+        display: flex;
+        align-items: center;
     }
-    &-body{
-        display:flex ;
+    &-link{
+        color: #fff;
     }
     &-sub-title{
         color: #ff6d6d;
         margin-bottom: 10px;
         text-align: center;
         font-size: 16px;
+        font-family: 'Exo', sans-serif;
+    }
+    &-desc
+    {
+        margin-top: 23px;
+        text-align: center;
+        color: white !important; 
         font-family: 'Exo', sans-serif;
     }
     &-title{
@@ -21,53 +101,21 @@
         color: white !important; 
         font-family: 'Exo', sans-serif;
     }
-     &-from{
-        padding: 11px 84px;
-        border: 0px solid #fff;
-        font-family: 'Exo', sans-serif;
-        text-align: center;
-        border-radius: 4px;
-        text-decoration: none; 
+    &-form{
+        gap: 30px;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
     }
-    &-footer{
-        margin-top: 23px;
-        text-align: center;
-        color: white !important; 
-        font-family: 'Exo', sans-serif;
+    .my-input{
+        color:#9092a7 ;
+        background: #464c77;
+        border-radius: 2px;
+        border: 1px solid #999cb4;
+        padding: 17px 147px 17px 18px;
+    }
+    input ::placeholder{
+        color: #9092a7;
 
     }
-    &-input{
-        padding: 11px 17px;
-        background-color: #464c77;
-        color:#fff ;
-        border: 1px solid;
-        border-radius: 1px solid #fff;
-    }
-    &-day {
-        padding-top: 12px;
-        color: white;
-        font-family: 'Exo', sans-serif;
-    }
-    &-img-link{
-        background-color: #ff6d6d;
-        color: #fff;
-        padding: 11px 84px;
-        border: 0px solid #fff;
-        font-family: 'Exo', sans-serif;
-        text-align: center;
-        border-radius: 4px;
-        text-decoration: none; 
-    }
-    &-link{
-        color: #fff;
-    }
-    &-icon{
-        display: flex;
-        margin-top: 123px;
-    }
-    &-form form input::placeholder {
-        color: white;
-      }
 }
-
 
