--- a/scss/_response.scss
+++ b/scss/_response.scss
@@ -1,9 +1,34 @@
-@media (min-width: 768px) {
-    
+@media (max-width: 768px) {
+    .header{
+        &-title {
+            font-size: 4em;
+            max-width: 578px;
+            margin-left: 3px;
+        }
+    }
+    .resposi{
+        &-wrap{
+
+            flex-direction: column;
+        }
+    }
 }
-@media (min-width: 992px) {
-    
+@media (max-width: 992px) {
+    .header{
+        &-title {
+        font-size: 3em;
+        max-width: 709px;
+        margin-left: 11px;
+    }
 }
-@media (min-width: 1200px) {
-    
+}
+@media (max-width: 1200px) {
+    .header{
+
+        &-title {
+            font-size: 4em;
+            max-width: 718px;
+            margin-left: 99px;
+        }
+    }
 }
