--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,21 @@
 .footer {
     padding-top: 95px;
     padding-bottom: 100px;
+    overflow: hidden;
+    position: relative;
+    &::before {
+        content: "";
+        background: red;
+        width: 84%;
+        height: 166%;
+        display: block;
+        position: absolute;
+        right: -911px;
+        bottom: -153px;
+        transform: rotate(226deg);
+        opacity: 0.5;
+    }
+   
     &-main {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 2fr ;
@@ -32,22 +47,21 @@
     li.footer-itemm {
         margin-bottom: 12px;
     }
-   
     &-input {
-        padding: 17px 45px 17px 17px;
+        padding: 20px 45px 23px 19px;
         border-radius: 2px;
+        margin-top: -2px;
         font-family: "Exo", sans-serif;
         border: 1px solid #b8b8bf;
     }
     &-logo {
         display:flex;
         align-items: center;
-        // justify-content: center;
         margin-bottom: 18px;
     }
     &-image {
         background: #ff6d6d;
-        padding: 16px;
+        padding: 18px;
         margin-left: -4px;
         border-radius: 2px;
     }
