--- a/scss/_over.scss
+++ b/scss/_over.scss
@@ -73,19 +73,30 @@
     background-color: #323969;
     padding-top: 90px;
     padding-bottom: 85px;
+    position: relative;
     &-days{
         display: flex;
         align-items: center;
+        position: absolute;
+        right: 230px;
+        bottom: 180px;
     }
     &-link{
         color: #fff;
     }
+    &-text{
+        color: #fff;
+        margin-top: -28px;
+        font-family: "Exo", sans-serif;
+        text-decoration: none;
+    }
     &-sub-title{
         color: #ff6d6d;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         text-align: center;
+        letter-spacing: 3px;
         font-size: 16px;
-        font-family: 'Exo', sans-serif;
+        font-family: "Exo", sans-serif;
     }
     &-desc
     {
@@ -97,7 +108,7 @@
     &-title{
         font-size: 40px;
         text-align: center;
-        margin-bottom: 10px;
+        margin-bottom:  55px;
         color: white !important; 
         font-family: 'Exo', sans-serif;
     }
@@ -107,15 +118,25 @@
         grid-template-columns: repeat(4,1fr);
     }
     .my-input{
-        color:#9092a7 ;
+        color: #9092a7;
         background: #464c77;
         border-radius: 2px;
         border: 1px solid #999cb4;
-        padding: 17px 147px 17px 18px;
+        padding:15px 72px 15px 18px;
     }
     input ::placeholder{
         color: #9092a7;
 
+    }
+    .btn-button{
+        background-color: #ff6d6d;
+        color: #fff;
+        padding: 16px 84px;
+        border: 0px solid #fff;
+        font-family: 'Exo', sans-serif;
+        text-align: center;
+        border-radius: 4px;
+        text-decoration: none; 
     }
 }
 
