--- a/scss/_responsi.scss
+++ b/scss/_responsi.scss
@@ -1,7 +1,20 @@
 .resposi{
     padding-top: 81px;
+    overflow: hidden;
+    position: relative;
     padding-bottom: 73px;
-
+    &::before {
+        content: "";
+        background: red;
+        width: 59%;
+        height: 110%;
+        display: block;
+        position: absolute;
+        left: -270px;
+        bottom: -188px;
+        transform: rotate(228deg);
+        opacity: 0.5;
+    }
     
     &-title{
         color: #ff6d6d; 
@@ -15,7 +28,6 @@
         font-family: 'Exo', sans-serif;
         line-height: 45px;
     }
-   
     &-dots{
         color: #ff6d6d; 
     }
