--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -20,6 +20,9 @@
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 2fr ;
         gap: 50px;
+        @media(max-width:768px){
+            display: block;
+        }
     }
     &-heading {
         font-size: 22px;
@@ -75,8 +78,5 @@
         max-width: 264px;
         font-family: "Exo", sans-serif;
 
-    }
-    &-img  {
-        // margin-left: 70px;
     }
 }
