--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,7 +11,7 @@
         &-title {
                 font-family: 'Exo', sans-serif;
                 text-align: center;
-                font-size: 60px;
+                font-size: 4em;
                 font-weight: 100;
                 max-width: 718px;
                 margin-left: 174px;
