--- a/scss/_response.scss
+++ b/scss/_response.scss
@@ -30,19 +30,55 @@
         }
     }
 }
-
-@media (max-width: 768px) {
+@media(max-width:1175px){
     .header{
         &-title {
-            font-size: 4em;
-            max-width: 578px;
-            margin-left: 3px;
+            font-size: 5em;
+            max-width: 976px;
+            margin-left: -12px;
+        }
+    }
+}
+@media (max-width: 992px) {
+    .header{
+        &-title {
+        font-size: 3em !important;
+        max-width: 709px;
+        margin-left: 11px;
+    }
+}
+}
+@media(max-width:962px){
+    .header{
+        &-title {
+            font-size: 3em;
+            margin-left: 11px;
+        }
+    }
+}
+
+@media(max-width:826px) {
+    .header-title {
+        font-size: 3em;
+        margin-left: -25px;
+    }
+}
+@media (max-width: 767px) {
+    .header{
+        &-title {
+            font-size: 2em;
+        max-width: 718px;
+        margin-left: -4px;
         }
     }
     .resposi{
         &-wrap{
-
             flex-direction: column;
+        }
+    }
+    .over{
+        &-main{
+            display: block;
         }
     }
     .footer{
@@ -54,15 +90,7 @@
         }
     }
 }
-@media (max-width: 992px) {
-    .header{
-        &-title {
-        font-size: 3em;
-        max-width: 709px;
-        margin-left: 11px;
-    }
-}
-}
+
 @media(max-width:540){
     .header{
         &-title {
