--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ input {
 .header-title {
   font-family: "Exo", sans-serif;
   text-align: center;
-  font-size: 60px;
+  font-size: 4em;
   font-weight: 100;
   max-width: 718px;
   margin-left: 174px;
@@ -519,6 +519,11 @@ input {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+@media (max-width: 768px) {
+  .over-form {
+    display: block;
+  }
+}
 .over .my-input {
   color: #9092a7;
   background: #464c77;
@@ -565,6 +570,11 @@ input {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 2fr;
   gap: 50px;
+}
+@media (max-width: 768px) {
+  .footer-main {
+    display: block;
+  }
 }
 .footer-heading {
   font-size: 22px;
@@ -617,36 +627,7 @@ input {
   max-width: 264px;
   font-family: "Exo", sans-serif;
 }
-@media (max-width: 768px) {
-  .header-title {
-    font-size: 4em;
-    max-width: 578px;
-    margin-left: 3px;
-  }
-  .resposi-wrap {
-    flex-direction: column;
-  }
-  .footer-input {
-    padding: 8px 45px 8px 19px;
-  }
-  .footer::before {
-    display: block;
-  }
-}
-@media (max-width: 992px) {
-  .header-title {
-    font-size: 3em;
-    max-width: 709px;
-    margin-left: 11px;
-  }
-}
-@media (max-width: 540) {
-  .header-title {
-    font-size: 2em;
-    max-width: 703px;
-    margin-left: -7px;
-  }
-}
+
 @media (max-width: 1200px) {
   .header-title {
     font-size: 4em;
@@ -670,5 +651,57 @@ input {
   }
   .footer::before {
     display: block;
+  }
+}
+@media (max-width: 1175px) {
+  .header-title {
+    font-size: 5em;
+    max-width: 976px;
+    margin-left: -12px;
+  }
+}
+@media (max-width: 992px) {
+  .header-title {
+    font-size: 3em !important;
+    max-width: 709px;
+    margin-left: 11px;
+  }
+}
+@media (max-width: 962px) {
+  .header-title {
+    font-size: 3em;
+    margin-left: 11px;
+  }
+}
+@media (max-width: 826px) {
+  .header-title {
+    font-size: 3em;
+    margin-left: -25px;
+  }
+}
+@media (max-width: 767px) {
+  .header-title {
+    font-size: 2em;
+    max-width: 718px;
+    margin-left: -4px;
+  }
+  .resposi-wrap {
+    flex-direction: column;
+  }
+  .over-main {
+    display: block;
+  }
+  .footer-input {
+    padding: 8px 45px 8px 19px;
+  }
+  .footer::before {
+    display: block;
+  }
+}
+@media (max-width: 540) {
+  .header-title {
+    font-size: 2em;
+    max-width: 703px;
+    margin-left: -7px;
   }
 }/*# sourceMappingURL=style.css.map */
