--- a/scss/_user.scss
+++ b/scss/_user.scss
@@ -32,4 +32,11 @@
         padding-bottom: 77px;
 
     }
+    
+    @media(max-width:768px){
+        .col-user{
+         flex: 0 0 100%;
+         max-width: 100%;
+        }
+     }
 }
