--- a/scss/_responsi.scss
+++ b/scss/_responsi.scss
@@ -15,7 +15,7 @@
         transform: rotate(228deg);
         opacity: 0.5;
     }
-    
+   
     &-title{
         color: #ff6d6d; 
         margin-bottom: 10px;
@@ -35,5 +35,10 @@
         margin-left: -58px;
       
     }
-   
+    @media(max-width:768px){
+       .col-reposive{
+        flex: 0 0 100%;
+        max-width: 100%;
+       }
+    }
 }
