--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -49,4 +49,10 @@
     &-icon-gap{
     text-align: center;
     }
+    @media(max-width:768px){
+        .blog-col{
+         flex: 0 0 100%;
+         max-width: 100%;
+        }
+     }
     }
