--- a/scss/_over.scss
+++ b/scss/_over.scss
@@ -117,7 +117,8 @@
         display: grid;
         grid-template-columns: repeat(4,1fr);
         @media(max-width:768px){
-            display: block;
+            display: flex;
+            flex-direction: column;
         }
     }
     .my-input{
