--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -9,6 +9,7 @@
     color: #ff6d6d;
     margin-bottom: 6px;
     font-size: 16px;
+    font-weight: 400;
     letter-spacing: 2.5px;
     font-family: "Exo", sans-serif;
     }
@@ -41,11 +42,11 @@
             content: "";
             background: red;
             width: 144%;
-            height: 55%;
+            height: 57%;
             display: block;
             position: relative;
             right: 29px;
-            bottom: -428px;
+            bottom: -430px;
             transform: rotate(319deg);
             opacity: 0.5;
         }
