--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -22,12 +22,14 @@
         color:#ff6d6d;
         font-family: 'Exo', sans-serif;
         font-size: 16px;
+        letter-spacing: 3px;
     }   
    &-title {
-        font-size: 40px;
-        font-weight: 500;
-        padding-bottom: 123px;
-        font-family: "Exo", sans-serif;
+    font-size: 40px;
+    font-weight: 500;
+    margin-top: 13px;
+    margin-bottom: 123px;
+    font-family: "Exo", sans-serif;
     }
     &-text{
         font-size: 22px;
