--- a/scss/_over.scss
+++ b/scss/_over.scss
@@ -1,74 +1,3 @@
-// .over{
-//     background-color: #323969;
-//     &-wrap {
-//         padding-top: 39px;
-//         padding-bottom: 45px;
-//     }
-//     &-body{
-//         display:flex ;
-//     }
-//     &-sub-title{
-//         color: #ff6d6d;
-//         margin-bottom: 10px;
-//         text-align: center;
-//         font-size: 16px;
-//         font-family: 'Exo', sans-serif;
-//     }
-//     &-title{
-//         font-size: 40px;
-//         text-align: center;
-//         margin-bottom: 10px;
-//         color: white !important; 
-//         font-family: 'Exo', sans-serif;
-//     }
-//      &-from{
-//         padding: 11px 84px;
-//         border: 0px solid #fff;
-//         font-family: 'Exo', sans-serif;
-//         text-align: center;
-//         border-radius: 4px;
-//         text-decoration: none; 
-//     }
-//     &-footer{
-//         margin-top: 23px;
-//         text-align: center;
-//         color: white !important; 
-//         font-family: 'Exo', sans-serif;
-
-//     }
-//     &-input{
-//         padding: 11px 17px;
-//         background-color: #464c77;
-//         color:#fff ;
-//         border: 1px solid;
-//         border-radius: 1px solid #fff;
-//     }
-//     &-day {
-//         padding-top: 12px;
-//         color: white;
-//         font-family: 'Exo', sans-serif;
-//     }
-//     &-img-link{
-//         background-color: #ff6d6d;
-//         color: #fff;
-//         padding: 11px 84px;
-//         border: 0px solid #fff;
-//         font-family: 'Exo', sans-serif;
-//         text-align: center;
-//         border-radius: 4px;
-//         text-decoration: none; 
-//     }
-//     &-link{
-//         color: #fff;
-//     }
-//     &-icon{
-//         display: flex;
-//         margin-top: 123px;
-//     }
-//     &-form form input::placeholder {
-//         color: white;
-//       }
-// }
 .over{
     background-color: #323969;
     padding-top: 90px;
@@ -80,6 +9,9 @@
         position: absolute;
         right: 230px;
         bottom: 180px;
+        @media(max-width:768px){
+                right: 143px;
+        }
     }
     &-link{
         color: #fff;
@@ -141,6 +73,8 @@
         text-align: center;
         border-radius: 4px;
         text-decoration: none; 
+        @media(max-width:768px){
+            margin-top: 39px;
+        }
     }
 }
-
