--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -32,6 +32,9 @@
         line-height: 50px;
         font-weight: 500;
     }
+    &-text p:first-child {
+        margin-bottom: 10px;
+    }
     &-img{
         overflow: hidden;
         background-image: url(./image/img.png);
@@ -46,7 +49,7 @@
             display: block;
             position: relative;
             right: 29px;
-            bottom: -430px;
+            bottom: -442px;
             transform: rotate(319deg);
             opacity: 0.5;
         }
