--- a/scss/_awesone.scss
+++ b/scss/_awesone.scss
@@ -24,7 +24,7 @@
         font-size: 16px;
         color:#8b8b8e;
         max-width: 619px;
-        line-height: 24px;
+        line-height:1.5;
         margin-left: 247px;
         margin-bottom: 63px;
     }
