--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,7 @@
                 font-size: 4em;
                 font-weight: 100;
                 max-width: 718px;
-                margin-left: 194px;
+                margin: 0 auto;
                 line-height: 1.5;
             }
         &-img {
