--- a/scss/_response.scss
+++ b/scss/_response.scss
@@ -1,3 +1,12 @@
+@media (max-width:1449px) {
+
+    .over{
+        &-days {
+            right: 189px;
+        }
+    }
+
+}
 @media (max-width:1200px) {
     .header{
 
@@ -7,16 +16,35 @@
             margin-left: 99px;
         }
     }
+    .responsi{
+        &::before {
+            content: "";
+            background: red;
+            width: 59%;
+            height: 110%;
+            display: block;
+            position: absolute;
+            left: -320px;
+            bottom: 26px;
+            transform: rotate(228deg);
+            opacity: 0.5;
+        }
+    }
+    .over{
+        &-main{
+            display: block;
+        }
+    }
     .design{
         &::before {
             content: "";
             background: red;
             width: 144%;
-            height: 55%;
+            height: 57%;
             display: block;
             position: relative;
-            right: -88px;
-            bottom: -769px;
+            right: -8px;
+            bottom: -486px;
             transform: rotate(319deg);
             opacity: 0.5;
         }
@@ -30,6 +58,12 @@
         }
     }
 }
+@media(max-width:1191px){
+    .over-form {
+        margin-left: -48px;
+        gap: 14px;
+    }
+}
 @media(max-width:1175px){
     .header{
         &-title {
@@ -39,6 +73,19 @@
         }
     }
 }
+@media(max-width:1008px){
+    // .over .my-input {
+    //     padding: 1px 36px 1px 32px;
+    // }
+    .over-form {
+        margin-left: -32px;
+        gap: 9px;
+    }
+    .over-days {
+        right: 28px;
+        top: 156px;
+    }
+}
 @media (max-width: 992px) {
     .header{
         &-title {
@@ -46,7 +93,19 @@
         max-width: 709px;
         margin-left: 11px;
     }
-}
+    }
+    .over .my-input {
+        color: #9092a7;
+        background: #464c77;
+        border-radius: 2px;
+        border: 1px solid #999cb4;
+        padding: 12px 39px 15px 18px;
+    }
+ 
+    .over-form {
+        margin-left: -108px;
+        gap: 9px;
+    }
 }
 @media(max-width:962px){
     .header{
@@ -54,6 +113,10 @@
             font-size: 3em;
             margin-left: 11px;
         }
+    }
+    .over-form {
+        margin-left: -107px;
+        gap: 9px;
     }
 }
 
@@ -81,6 +144,13 @@
             display: block;
         }
     }
+    .over-form {
+        margin-left: 7px;
+        gap: 9px;
+    }
+    .over-days{
+        display: none;
+    }
     .footer{
         &-input {
             padding: 8px 45px 8px 19px;
@@ -91,12 +161,46 @@
     }
 }
 
-@media(max-width:540){
+@media(max-width:540px){
     .header{
         &-title {
         font-size: 2em;
         max-width: 703px;
         margin-left: -7px;
     }
+    }
+    
+}
+@media(max-width:451px){
+    .design{
+        &-img::before {
+             content: "";
+             background: red;
+             width: 144%;
+             height: 65%;
+             display: block;
+             position: relative;
+             right: 12px;
+             bottom: -228px;
+             transform: rotate(319deg);
+             opacity: 0.5;
+         }
+     }
+     .resposi{
+        &::before {
+            content: "";
+            background: red;
+            width: 64%;
+            height: 112%;
+            display: block;
+            position: absolute;
+            left: -270px;
+            bottom: 30px;
+            transform: rotate(228deg);
+            opacity: 0.5;
+        }
+     }
+     .over-days {
+        right: 168px;
     }
 }
